[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynet-mcp-bridge"
version = "1.0.0"
description = "PyNet Bridge MCP implementation to connect IAs with PyNet Platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "psutil",
    "fastmcp"
]

[project.scripts]
pynet-bridge = "pynet_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["pynet_mcp"]